--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <script>
     const musicStyles = {
-      "Tango": "https://www.youtube.com/watch?v=TGvXjKKT9yY",
+      "Tango": "https://grahamauctions.hibid.com",
       "Bolero": "https://www.youtube.com/watch?v=kA5GkLM5C7M",
       "Jazz": "https://www.youtube.com/watch?v=HMnrl0tmd3k",
       "Salsa": "https://www.youtube.com/watch?v=8k3F_zzOeZE",
