--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
   <button onclick="loadFromFile()">Load from File</button>
   <ul id="songList"></ul>
   <button onclick="playBravoSound()">Ỗ tay (Clap)</button>
-  <audio id="bravoSound" src="bravo.wav"></audio>
-
+  <audio id="bravoSound" src="data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA="></audio>
   <script>
     const songInput = document.getElementById("songInput");
     const songList = document.getElementById("songList");
